--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -3,40 +3,41 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: cadetblue;
+  border-style: outset;
+  border-color: salmon;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.single-profile {
+  border-style: outset;
+  text-align: left;
+  margin: 12px auto;
+  background-color: salmon;
+  border-spacing: 10px;
+  border-color: black;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profiles {
+  border-style: outset;
+  border-color: salmon;
+  text-shadow: 1px 1px 2.1px black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header {
+  border-style: outset;
+  border-color: salmon;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color: salmon;
+  text-shadow: 1px 1px 3.3px black;
+
 }
 
-.card {
-  padding: 2em;
+#margin {
+  margin-right: 10px;
+  margin-left: 1px;
 }
 
-.read-the-docs {
-  color: #888;
+.key-names {
+  color: darkslategrey;
+  text-shadow: 0px 1px 2.3px whitesmoke;
 }
